fix: 测试代码 Java 8 兼容——List.of 换 Arrays.asList
WopErrorTest 闭集断言（7 参）与 WopSpecConformanceTest §2.1
signedHeaders 断言（3 参）误用 JDK 9+ List.of，release 8 编译
拒绝。改 Arrays.asList，断言语义不变（element-wise equals）。
WopErrorTest 补 java.util.Arrays import。